fix: fix canvas drag overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   background-color: #e5e5ea;
 }
 
